CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/Chat_Agent_Config__mdt.object-meta.xml
<CustomObject>
    <label>Chat Agent Config</label>
    <pluralLabel>Chat Agent Configs</pluralLabel>
</CustomObject>