CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Allowed_Mime_Types__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Mime_Types__c</fullName>
    <label>Allowed Mime Types</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>