CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Aws_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Aws_Account_Id__c</fullName>
    <label>AWS Account Id</label>
    <type>Text</type>
    <length>12</length>
    <description>12-digit AWS account id linked to Partner Central. Used as the S3 key prefix (s3://bucket/{account-id}/...) when uploading attachments. Optional; required only when users attach files.</description>
    <inlineHelpText>The AWS account id behind the S3 Named Credential. Required for file attachments.</inlineHelpText>
</CustomField>