CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>