CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Max_Attachment_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Max_Attachment_Size_Bytes__c</fullName>
    <label>Max Attachment Size Bytes</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>