CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <label>Named Credential Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>