CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Request_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout_Seconds__c</fullName>
    <label>Request Timeout Seconds</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>