CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/S3_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Bucket_Name__c</fullName>
    <label>S3 Bucket Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Partner Central ephemeral, write-only S3 bucket attachments are uploaded to. Defaults to aws-partner-central-marketplace-ephemeral-writeonly-files.</description>
    <inlineHelpText>The Partner Central ephemeral attachment bucket. Used to build the s3Uri sent to the agent.</inlineHelpText>
</CustomField>