CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/S3_Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Named_Credential_Name__c</fullName>
    <label>S3 Named Credential Name</label>
    <type>Text</type>
    <length>80</length>
    <description>Named Credential (SigV4, service s3) used to PutObject file attachments to the Partner Central ephemeral bucket. Optional; required only when users attach files.</description>
    <inlineHelpText>SigV4 Named Credential targeting https://s3.us-east-1.amazonaws.com. Leave blank to disable file attachments.</inlineHelpText>
</CustomField>