CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Sandbox_Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Named_Credential_Name__c</fullName>
    <label>Sandbox Named Credential Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>