CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Session_Retention_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Retention_Minutes__c</fullName>
    <label>Session Retention Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>