CRM_Connections/salesforce/force-app/main/default/objects/Chat_Agent_Config__mdt/fields/Sse_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sse_Enabled__c</fullName>
    <label>SSE Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>